--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 
-        <div class="foote">
+        <div class="footer">
           <div><a href="https://www.spotify.com/in-en/legal/"><span>Legal</span></a></div>
           <div> <a href="https://www.spotify.com/in-en/safetyandprivacy/"><span>Safety & Privacy Center</span></a></div>
           <div>
